syntax = "proto3";

import "master_requests.proto";
import "slave_responses.proto";

service ExecutorService {
    rpc ExecuteTask (ExecutableTask) returns (ExecutionResponse) {};
}
